# Stock-Sensai-Trial

./: .env  .replit  EXECUTABLE_GUIDE.md  README.txt  app.py  auth_app.py  package_app.py  prediction_history.xlsx  prediction_report.html  pyproject.toml  requirements.txt  set_env.py  stock_data.xlsx  stock_prediction_report_20250517.docx  stock_prediction_report_20250521.docx  test_db_connection.py
