[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "beautifulsoup4>=4.13.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "openai>=1.78.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "streamlit-authenticator>=0.4.2",
    "streamlit>=1.45.0",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.0",
    "xlsxwriter>=3.2.3",
    "yfinance>=0.2.58",
    "selenium>=4.32.0",
    "arch>=7.2.0",
]
